[package]
name = "test_app_no_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_mcap = {path = "../agent_mcap"}
tokio = { version = "1.26.0", features = ["sync", "time", "signal", "rt", "macros", "rt-multi-thread"] }
chrono = "0.4.24"
mcap = "0.6.0"
anyhow = "1.0.70"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
async-trait = "0.1.67"
schemars = "0.8.12"
log = "0.4.17"
tokio-serial = "5.4.4"